<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 JoongAng Control, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by Sungchul Choi <scchoi@joas.co.kr>, 17. 12. 6 오후 4:25
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/sub_title_finish_charging"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btFinishChargingHome"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/button_selector"
            android:text="@string/string_home"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/title_finish_charging"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView13"
            android:layout_centerVertical="true"
            android:text="@string/string_charging_time"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView14"
            android:layout_below="@+id/textView12"
            android:layout_marginTop="22dp"
            android:text="@string/string_charge_amount"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignStart="@+id/textView13"
            android:layout_marginBottom="10dp"
            android:text="@string/string_charging_cost"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFinishChargingCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toEndOf="@+id/tvFinishChargingAmount"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignEnd="@+id/textView14"
            android:layout_below="@+id/textView14"
            android:layout_marginTop="52dp"
            android:src="@drawable/connector_off" />

        <TextView
            android:id="@+id/tvFinishChargingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@+id/textView12"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFinishChargingAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView13"
            android:layout_toEndOf="@+id/textView12"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>