<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 JoongAng Control, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by Sungchul Choi <scchoi@joas.co.kr>, 17. 12. 20 오전 10:25
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btConnectorWaitHome"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/button_selector"
            android:text="@string/string_home"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_above="@+id/btConnectorWaitNext"
            android:layout_centerHorizontal="true"
            android:src="@drawable/connector" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/string_conector_begin_charging"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/string_connector_wait"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btConnectorWaitNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btConnectorWaitHome"
            android:layout_alignBottom="@+id/btConnectorWaitHome"
            android:layout_alignParentStart="true"
            android:text="next" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>