<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/string_select_charging_method"
                android:textSize="50sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="800dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageAC3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/ac3_icon" />

                <ImageView
                    android:id="@+id/imageChademo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/chademo_icon" />

                <ImageView
                    android:id="@+id/imageCombo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@drawable/dccombo_icon" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"></RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <RelativeLayout
                android:layout_width="800dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/relativeLayout4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/relativeLayout4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btAC3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/string_ac3"
                        android:textColor="@android:color/background_light"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Space
                        android:id="@+id/spaceAC3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />

                    <Button
                        android:id="@+id/btChaDemo"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/string_dcchademo"
                        android:textColor="@android:color/background_light"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Space
                        android:id="@+id/spaceChademo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1" />

                    <Button
                        android:id="@+id/btDCCombo"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/string_dccombo"
                        android:textColor="@android:color/background_light"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Space
                        android:id="@+id/spaceCombo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>